# watchcat

./: .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  cli_example.yml  watchcat.gemspec
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
benchmark/: script.rb
exe/: watchcat
ext/watchcat/: Cargo.toml  extconf.rb
ext/watchcat/src/: debouncer_event.rs  event.rs  gvl_helpers.rs  lib.rs
lib/: watchcat.rb
lib/watchcat/: cli.rb  client.rb  debouncer.rb  event.rb  event_handler.rb  executor.rb  kind.rb  server.rb  version.rb
lib/watchcat/cli/: action_executor.rb  config.rb  debouncer.rb  watcher.rb
test/: test_helper.rb  test_watchcat.rb  watchcat_test.rb
test/watchcat/: cli_test.rb  dynamic_paths_test.rb  event_handler_test.rb  kind_test.rb
