[package]
name = "watchcat"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5.14"
magnus = "0.7"
notify = { version = "7.0.0", features = ["crossbeam-channel"] }
notify-debouncer-mini = { version = "0.5.0", features = ["crossbeam-channel"] }
rb-sys = "0.9.107"
